--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<title>Frontend Mentor | QR code component</title>
 	</head>
 	<body>
-		<div class="container">
-			<img src="images/image-qr-code.png" alt="Bar Code" class="image" />
+		<main class="container">
+			<img src="images/image-qr-code.png" alt="QR code to frontendmentor.io" class="image" />
 
 			<h1 class="header">
 				Improve your front-end<br />skills by building projects
@@ -31,7 +31,7 @@
 				<p class="description">Scan the QR code to visit Frontend</p>
 				<p class="description">Mentor and take your coding skills to</p>
 				<p class="description">the next level!</p>
-			</div>
+			</main>
 		</div>
 	</body>
 </html>
